@@ -15,6 +15,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ****  Fix duplicate begin error broke in 3.840, bug548.  [Alex Solomatnikov]
 
+****  Fix triangle symbol resolution error broke in 3.840, bug550.  [Ted Campbell]
+
 
 * Verilator 3.840 2012/07/31 Beta
 
